--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta charset='utf-8' />
+    <title>Puzzle game</title>
   </head>
 
   <body>
-    <div id="root"></div>
+    <canvas id='screen' style='background-color:#a2a2a2;'></canvas>
+
+    <script src='index.js'></script>
   </body>
 </html>
