--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,7 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <title>Puzzle game</title>
+    <title>Puzzle Blaster</title>
   </head>
 
   <body>
