tracked click on a cube

--- a/src/template.html
+++ b/src/template.html
@@ -5,9 +5,9 @@
     <title>Puzzle Blaster</title>
   </head>
 
-  <body>
-    <canvas id='screen' style='background-color:#a2a2a2;'></canvas>
-
+  <body >
+    <canvas id='screen' style='background-color:#adc7db;'></canvas>
+    <!-- 93adc2 adc7db 819fb8 8a99a6 bacfe0 7297b5 -->
     <script src='index.js'></script>
   </body>
 </html>
